--- a/source/repos/MedShop/MedShop/Views/Shared/AllMedicines.cshtml
+++ b/source/repos/MedShop/MedShop/Views/Shared/AllMedicines.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Medicine
 
 <div class="col-lg-4">
-    <img class="img-thumbnail" scr="@Model.img" alt="@Model.name">
+    <img class="img-thumbnail" src="@Model.img" alt="@Model.name">
     <h2>@Model.name</h2>
     <p>@Model.shortDesc</p>
     <p>Цена: @Model.price.ToString("c")</p>
