--- a/source/repos/MedShop/MedShop/Views/ShopCart/Index.cshtml
+++ b/source/repos/MedShop/MedShop/Views/ShopCart/Index.cshtml
@@ -7,5 +7,5 @@
      </div>
      }
     <hr />
-    <a class="btn btn-danger" asp-controller="Order" asp-action="Checkout">Оплатить</a>
+    <a class="btn btn-danger" asp-controller="Order" asp-action="Checkout">Оформить заказ</a>
 </div>
