--- a/source/repos/MedShop/MedShop/Views/Shared/_Layout.cshtml
+++ b/source/repos/MedShop/MedShop/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/ShopCart/">Корзина</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Account/Login">Авторизация</a>
+                    </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
