--- a/source/repos/MedShop/MedShop/Views/Shared/_Layout.cshtml
+++ b/source/repos/MedShop/MedShop/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="/ShopCart/">Корзина</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Account/Login">Авторизация</a>
+                        <a class="nav-link" href="/Account/CheckAuthor">Авторизация</a>
                     </li>
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
