--- a/source/repos/MedShop/MedShop/Views/Medicines/List.cshtml
+++ b/source/repos/MedShop/MedShop/Views/Medicines/List.cshtml
@@ -1,6 +1,4 @@
-﻿
-<h2>Все товары</h2>
-<h3>@Model.currCategory</h3>
+﻿<h1>@Model.currCategory</h1>
 <div class="row mt-5 mb-2">
     @{
         foreach (Medicine medicine in Model.allMedicines)
