--- a/source/repos/MedShop/MedShop/Views/Account/Login.cshtml
+++ b/source/repos/MedShop/MedShop/Views/Account/Login.cshtml
@@ -9,13 +9,13 @@
     <div>
         <div class="form-group">
             <label asp-for="Email">Введите Email</label>
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" />
+            <input type="text" asp-for="Email" class="form-control"/>
+            <span asp-validation-for="Email" class="text-danger"/>
         </div>
         <div class="form-group">
             <label asp-for="Password">Введите пароль</label>
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
+            <input asp-for="Password" class="form-control"/>
+            <span asp-validation-for="Password" class="text-danger"/>
         </div>
         <div class="form-group">
             <input type="submit" value="Войти" class="btn btn-outline-dark"/>
