--- a/source/repos/MedShop/MedShop/Views/Account/Register.cshtml
+++ b/source/repos/MedShop/MedShop/Views/Account/Register.cshtml
@@ -2,26 +2,26 @@
 
 <h2>Регистрация</h2>
 
-<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
+<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true" method="post" class="form-horizontal">
+    <div class="row mb-5" asp-validation-summary="ModelOnly" ></div>
     <div>
-        <div>
+        <div class="col-md-12">
             <label asp-for="Email">Введите Email</label><br />
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" />
+            <input type="text" asp-for="Email" class="form-control"/>
+            <span asp-validation-for="Email" class="text-danger"/>
         </div>
-        <div>
+        <div class="col-md-12">
             <label asp-for="Password">Введите пароль</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
+            <input asp-for="Password" class="form-control"/>
+            <span asp-validation-for="Password"  class="text-danger"/>
         </div>
-        <div>
+        <div class="col-md-12">
             <label asp-for="ConfirmPassword">Повторите пароль</label><br />
-            <input asp-for="ConfirmPassword" />
-            <span asp-validation-for="ConfirmPassword" />
+            <input asp-for="ConfirmPassword" class="form-control"/>
+            <span asp-validation-for="ConfirmPassword" class="text-danger"/>
         </div>
-        <div>
-            <input type="submit" value="Регистрация" />
+        <div class="form-group">
+            <input type="submit" value="Регистрация" class="btn btn-outline-dark" />
         </div>
     </div>
 </form>
