--- a/source/repos/MedShop/MedShop/Views/Shared/_Layout.cshtml
+++ b/source/repos/MedShop/MedShop/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Account/CheckAuthor">Авторизация</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Chat/Questions">Вопросы?</a>
+                    </li>
                 </ul>
             </div>
         </nav>
